--- a/EcoShield-Windows.css
+++ b/EcoShield-Windows.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 509px;
+  min-height: 378px;
 }
 
 .u-section-1 .u-text-1 {
@@ -14,6 +14,7 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   width: 836px;
+  text-shadow: -2px -2px 8px rgba(0,0,0,1);
   margin: 72px auto 0;
 }
 
@@ -39,8 +40,9 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 621px;
+  .u-section-1 .u-image-1 {
+    margin-right: 294px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-text-2 {
@@ -51,27 +53,33 @@
 }
 
 @media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 290px;
+  }
+
   .u-section-1 .u-text-1 {
     width: 720px;
   }
 
+  .u-section-1 .u-image-1 {
+    margin-top: 0;
+    margin-right: 183px;
+  }
+
   .u-section-1 .u-text-2 {
-    margin-left: 424px;
+    margin-top: -232px;
     margin-right: 31px;
+    margin-left: 424px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 579px;
+    min-height: 218px;
   }
 
   .u-section-1 .u-text-1 {
     width: 540px;
-  }
-
-  .u-section-1 .u-image-1 {
-    margin-left: 240px;
   }
 
   .u-section-1 .u-text-2 {
@@ -82,7 +90,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 435px;
+    min-height: 137px;
   }
 
   .u-section-1 .u-text-1 {
@@ -96,6 +104,7 @@
     width: 206px;
     height: 206px;
     margin-top: 1px;
+    margin-right: 40px;
     margin-left: 21px;
   }
 
@@ -166,11 +175,17 @@
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 156px;
+    min-height: 216px;
+  }
+
+  .u-section-2 .u-icon-1 {
+    margin-top: -46px;
+    margin-bottom: 6px;
+    margin-left: 209px;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 156px;
+    min-height: 216px;
   }
 }
 
@@ -179,8 +194,23 @@
     min-height: 324px;
   }
 
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 8px;
+    margin-bottom: 12px;
+  }
+
   .u-section-2 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 304px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 0;
+  }
+
+  .u-section-2 .u-icon-1 {
+    margin-top: -40px;
+    margin-bottom: 0;
+    margin-left: 118px;
   }
 
   .u-section-2 .u-layout-cell-2 {
@@ -190,43 +220,50 @@
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 215px;
+    min-height: 348px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 223px;
+  }
+
+  .u-section-2 .u-icon-1 {
+    margin-left: 130px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 393px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    margin-top: 15px;
-    margin-bottom: 0;
+    min-height: 510px;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 189px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-top: 0;
+    min-height: 306px;
   }
 
   .u-section-2 .u-icon-1 {
-    margin-top: -35px;
-    margin-left: 58px;
+    margin-left: 26px;
   }
 
   .u-section-2 .u-layout-cell-2 {
     min-height: 189px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 818px;
+  min-height: 991px;
+}
+
+.u-section-3 .u-text-1 {
+  margin: 24px 0 0;
 }
 
 .u-section-3 .u-layout-wrap-1 {
   margin-top: 112px;
-  margin-bottom: 19px;
+  margin-bottom: 60px;
 }
 
 .u-section-3 .u-layout-cell-1 {
@@ -249,14 +286,15 @@
 }
 
 .u-section-3 .u-container-layout-2 {
-  padding: 30px;
-}
-
-.u-section-3 .u-text-1 {
-  margin: 0;
+  padding: 13px 30px;
 }
 
 .u-section-3 .u-text-2 {
+  font-size: 2.25rem;
+  margin: 22px 0 0;
+}
+
+.u-section-3 .u-text-3 {
   margin: 20px 0 0;
 }
 
@@ -283,16 +321,16 @@
   padding: 30px;
 }
 
-.u-section-3 .u-text-3 {
+.u-section-3 .u-text-4 {
   margin: 0;
 }
 
-.u-section-3 .u-text-4 {
+.u-section-3 .u-text-5 {
   margin: 20px 0 0;
 }
 
 .u-section-3 .u-layout-cell-5 {
-  min-height: 325px;
+  min-height: 399px;
   background-image: none;
 }
 
@@ -300,26 +338,32 @@
   padding: 30px;
 }
 
-.u-section-3 .u-text-5 {
-  margin: 0;
-}
-
 .u-section-3 .u-text-6 {
-  margin: 20px 0 0;
+  font-size: 2.25rem;
+  margin: 14px 0 0;
 }
 
-.u-section-3 .u-image-3 {
-  min-height: 325px;
-  background-image: url("images/Flushwhiteleft.png");
+.u-section-3 .u-text-7 {
+  margin: 14px 0 0;
+}
+
+.u-section-3 .u-layout-cell-6 {
   background-position: 50% 50%;
+  min-height: 399px;
 }
 
 .u-section-3 .u-container-layout-6 {
-  padding: 30px;
+  padding: 30px 0;
+}
+
+.u-section-3 .u-image-3 {
+  width: 289px;
+  height: 288px;
+  margin: 0 -12px 0 auto;
 }
 
 .u-section-3 .u-layout-cell-7 {
-  min-height: 325px;
+  min-height: 399px;
   background-image: none;
 }
 
@@ -327,12 +371,13 @@
   padding: 30px;
 }
 
-.u-section-3 .u-text-7 {
-  margin: 0;
+.u-section-3 .u-text-8 {
+  font-size: 2.25rem;
+  margin: 14px 0 0;
 }
 
-.u-section-3 .u-text-8 {
-  margin: 20px 0 0;
+.u-section-3 .u-text-9 {
+  margin: 14px 0 0;
 }
 
 .u-section-3 .u-layout-cell-8 {
@@ -351,7 +396,17 @@
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 671px;
+    min-height: 1075px;
+  }
+
+  .u-section-3 .u-text-1 {
+    width: auto;
+    margin-top: 15px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-top: 60px;
+    margin-bottom: 46px;
   }
 
   .u-section-3 .u-layout-cell-1 {
@@ -363,21 +418,92 @@
     min-height: 431px;
   }
 
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .u-section-3 .u-text-2 {
+    width: auto;
+    margin-top: 40px;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .u-section-3 .u-text-3 {
+    width: auto;
+    margin-top: 41px;
+    margin-right: 17px;
+    margin-left: 1px;
+  }
+
   .u-section-3 .u-layout-cell-3 {
     min-height: 431px;
     background-position: 50% 50%;
+  }
+
+  .u-section-3 .u-image-2 {
+    margin-top: 70px;
+    margin-right: auto;
   }
 
   .u-section-3 .u-layout-cell-4 {
     min-height: 431px;
   }
 
+  .u-section-3 .u-container-layout-4 {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
+  .u-section-3 .u-text-4 {
+    width: 168px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-text-5 {
+    width: auto;
+    margin-top: 30px;
+  }
+
   .u-section-3 .u-layout-cell-5 {
     min-height: 444px;
   }
 
+  .u-section-3 .u-container-layout-5 {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .u-section-3 .u-text-6 {
+    width: auto;
+    margin-top: 35px;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .u-section-3 .u-text-7 {
+    width: auto;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .u-section-3 .u-layout-cell-6 {
+    min-height: 329px;
+  }
+
+  .u-section-3 .u-container-layout-6 {
+    padding-right: 9px;
+    padding-left: 11px;
+  }
+
   .u-section-3 .u-image-3 {
-    min-height: 444px;
+    width: 224px;
+    height: 223px;
+    margin-left: -26px;
+    margin-right: -26px;
   }
 
   .u-section-3 .u-layout-cell-7 {
@@ -389,13 +515,13 @@
     padding-left: 23px;
   }
 
-  .u-section-3 .u-text-7 {
+  .u-section-3 .u-text-8 {
     width: auto;
     margin-top: 27px;
     margin-left: 7px;
   }
 
-  .u-section-3 .u-text-8 {
+  .u-section-3 .u-text-9 {
     margin-left: 7px;
     margin-right: 7px;
   }
@@ -406,172 +532,370 @@
   }
 
   .u-section-3 .u-image-4 {
-    width: 235px;
-    height: 224px;
-    margin-left: 0;
-    margin-right: 0;
+    height: 217px;
+    margin-top: 75px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 901px;
+    min-height: 1522px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-top: 63px;
+    margin-bottom: 24px;
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 660px;
+    min-height: 406px;
     order: 0;
-  }
-
-  .u-section-3 .u-layout-cell-2 {
-    min-height: 100px;
-    order: 1;
-  }
-
-  .u-section-3 .u-layout-cell-3 {
-    min-height: 660px;
-    order: 3;
-  }
-
-  .u-section-3 .u-layout-cell-4 {
-    min-height: 100px;
-    order: 2;
-  }
-
-  .u-section-3 .u-layout-cell-5 {
-    min-height: 100px;
-    order: 1;
-  }
-
-  .u-section-3 .u-image-3 {
-    min-height: 680px;
-    order: 0;
-  }
-
-  .u-section-3 .u-layout-cell-7 {
-    min-height: 100px;
-    order: 2;
-  }
-
-  .u-section-3 .u-layout-cell-8 {
-    min-height: 680px;
-    order: 3;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 2847px;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 990px;
   }
 
   .u-section-3 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
-  .u-section-3 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-layout-cell-3 {
-    min-height: 990px;
-    order: 2;
-  }
-
-  .u-section-3 .u-layout-cell-4 {
-    order: 3;
-  }
-
-  .u-section-3 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-container-layout-5 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-image-3 {
-    min-height: 1020px;
-  }
-
-  .u-section-3 .u-container-layout-6 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-layout-cell-7 {
-    order: 3;
-  }
-
-  .u-section-3 .u-container-layout-7 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-layout-cell-8 {
-    min-height: 1020px;
-    order: 2;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 1931px;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 623px;
-  }
-
-  .u-section-3 .u-layout-cell-2 {
-    min-height: 158px;
-  }
-
-  .u-section-3 .u-text-1 {
+  .u-section-3 .u-image-1 {
+    height: 248px;
+    margin-top: 39px;
+    margin-right: initial;
+    margin-left: initial;
     width: auto;
   }
 
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 406px;
+    order: 1;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-3 .u-text-2 {
+    font-size: 2.125rem;
+    margin-top: 41px;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-top: 16px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   .u-section-3 .u-layout-cell-3 {
-    min-height: 623px;
+    min-height: 406px;
+    order: 3;
   }
 
   .u-section-3 .u-image-2 {
-    margin-right: auto;
+    width: 166px;
+    height: 291px;
+    margin-top: 27px;
   }
 
-  .u-section-3 .u-image-3 {
-    min-height: 642px;
-    background-position: 34.51% 50%;
+  .u-section-3 .u-layout-cell-4 {
+    min-height: 406px;
+    order: 2;
   }
 
-  .u-section-3 .u-layout-cell-7 {
-    min-height: 295px;
+  .u-section-3 .u-container-layout-4 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-3 .u-text-4 {
+    width: auto;
+    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-5 {
+    margin-top: 13px;
+  }
+
+  .u-section-3 .u-layout-cell-5 {
+    min-height: 971px;
+    order: 1;
+  }
+
+  .u-section-3 .u-container-layout-5 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-3 .u-text-6 {
+    font-size: 2.0625rem;
+    margin-top: 28px;
   }
 
   .u-section-3 .u-text-7 {
+    margin-top: 27px;
     margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-layout-cell-6 {
+    min-height: 971px;
+    order: 0;
+  }
+
+  .u-section-3 .u-container-layout-6 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-3 .u-image-3 {
+    margin-top: 47px;
+  }
+
+  .u-section-3 .u-layout-cell-7 {
+    min-height: 971px;
+    order: 2;
+  }
+
+  .u-section-3 .u-container-layout-7 {
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .u-section-3 .u-text-8 {
+    font-size: 2.0625rem;
+    margin-top: 26px;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-9 {
+    width: auto;
+    margin-top: 29px;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-3 .u-layout-cell-8 {
-    min-height: 555px;
+    min-height: 971px;
+    order: 3;
   }
 
   .u-section-3 .u-image-4 {
-    margin-top: 197px;
+    height: 166px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 2896px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 767px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 723px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 177px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .u-section-3 .u-text-2 {
+    font-size: 1.875rem;
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-top: 13px;
+  }
+
+  .u-section-3 .u-layout-cell-3 {
+    min-height: 881px;
+    order: 2;
+  }
+
+  .u-section-3 .u-image-2 {
+    width: 490px;
+    height: 831px;
+    margin-top: 26px;
+  }
+
+  .u-section-3 .u-layout-cell-4 {
+    min-height: 189px;
+    order: 3;
+  }
+
+  .u-section-3 .u-container-layout-4 {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-5 {
+    margin-top: 24px;
+  }
+
+  .u-section-3 .u-layout-cell-5 {
+    min-height: 308px;
+  }
+
+  .u-section-3 .u-text-6 {
+    font-size: 1.875rem;
+  }
+
+  .u-section-3 .u-layout-cell-6 {
+    min-height: 628px;
+  }
+
+  .u-section-3 .u-image-3 {
+    width: 553px;
+    height: 551px;
+    margin-top: 27px;
+    margin-right: auto;
+    margin-left: -13px;
+  }
+
+  .u-section-3 .u-layout-cell-7 {
+    min-height: 100px;
+    order: 3;
+  }
+
+  .u-section-3 .u-text-8 {
+    font-size: 1.875rem;
+  }
+
+  .u-section-3 .u-layout-cell-8 {
+    min-height: 693px;
+    order: 2;
+  }
+
+  .u-section-3 .u-image-4 {
+    height: 498px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-text-1 {
+    margin-top: 76px;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-top: 28px;
+    margin-bottom: 33px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 503px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 447px;
+    margin-top: 65px;
+    margin-bottom: -11px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 192px;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 1.5rem;
+  }
+
+  .u-section-3 .u-layout-cell-3 {
+    min-height: 559px;
+  }
+
+  .u-section-3 .u-image-2 {
+    width: 280px;
+    height: 493px;
+    margin-top: 65px;
+  }
+
+  .u-section-3 .u-layout-cell-4 {
+    min-height: 201px;
+  }
+
+  .u-section-3 .u-layout-cell-5 {
+    min-height: 193px;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 1.5rem;
+  }
+
+  .u-section-3 .u-layout-cell-6 {
+    background-position: 26.61% 50%;
+    min-height: 445px;
+  }
+
+  .u-section-3 .u-container-layout-6 {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .u-section-3 .u-image-3 {
+    width: 335px;
+    height: 334px;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-layout-cell-7 {
+    min-height: 241px;
+  }
+
+  .u-section-3 .u-text-8 {
+    font-size: 1.5rem;
+  }
+
+  .u-section-3 .u-layout-cell-8 {
+    min-height: 455px;
+  }
+
+  .u-section-3 .u-container-layout-8 {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .u-section-3 .u-image-4 {
+    height: 314px;
+    margin-top: 131px;
+    margin-bottom: -30px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 } .u-section-4 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/FoilSwatch2017.jpg");
@@ -579,33 +903,37 @@
 }
 
 .u-section-4 .u-sheet-1 {
-  min-height: 800px;
+  min-height: 920px;
 }
 
 .u-section-4 .u-text-1 {
-  margin: 340px auto 0;
+  margin: 351px auto 0;
 }
 
 .u-section-4 .u-text-2 {
   font-size: 1.875rem;
-  margin: 135px 87px 60px;
+  margin: 220px 87px 60px;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 660px;
+    min-height: 731px;
+  }
+
+  .u-section-4 .u-text-1 {
+    margin-top: 300px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 506px;
+    min-height: 560px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 380px;
+    min-height: 420px;
   }
 }
 
@@ -616,6 +944,7 @@
 
   .u-section-4 .u-text-1 {
     width: auto;
+    margin-top: 295px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -623,6 +952,7 @@
   .u-section-4 .u-text-2 {
     font-size: 1.5rem;
     width: auto;
+    margin-top: 99px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -631,13 +961,12 @@
 }
 
 .u-section-5 .u-text-1 {
-  font-weight: normal;
   margin: 60px auto 0;
 }
 
 .u-section-5 .u-list-1 {
   width: 945px;
-  margin: 32px auto 0;
+  margin: 49px auto 0 88px;
 }
 
 .u-section-5 .u-repeater-1 {
@@ -679,12 +1008,17 @@
 .u-section-5 .u-image-4 {
   width: 215px;
   height: 114px;
-  margin: 0 auto 60px;
+  margin: -17px auto 60px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 592px;
+  }
+
   .u-section-5 .u-list-1 {
     width: 940px;
+    margin-left: 0;
   }
 
   .u-section-5 .u-repeater-1 {
@@ -704,22 +1038,16 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 845px;
+  }
+
   .u-section-5 .u-list-1 {
     width: 540px;
   }
 
   .u-section-5 .u-repeater-1 {
     grid-template-columns: 100%;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-5 .u-text-1 {
-    font-weight: 700;
-  }
-
-  .u-section-5 .u-list-1 {
-    width: 340px;
   }
 
   .u-section-5 .u-image-1 {
@@ -733,12 +1061,31 @@
   .u-section-5 .u-image-3 {
     margin-left: auto;
   }
+
+  .u-section-5 .u-image-4 {
+    margin-top: 16px;
+    margin-bottom: 27px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 839px;
+  }
+
+  .u-section-5 .u-list-1 {
+    width: 340px;
+  }
+
+  .u-section-5 .u-image-4 {
+    margin-top: 34px;
+    margin-bottom: 9px;
+  }
 }.u-section-6 .u-sheet-1 {
   min-height: 422px;
 }
 
 .u-section-6 .u-text-1 {
-  font-weight: normal;
   margin: 30px auto 0;
 }
 
@@ -841,7 +1188,11 @@
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 406px;
+    min-height: 429px;
+  }
+
+  .u-section-6 .u-text-1 {
+    margin-top: 60px;
   }
 
   .u-section-6 .u-repeater-1 {
@@ -897,10 +1248,6 @@
 @media (max-width: 575px) {
   .u-section-6 .u-sheet-1 {
     min-height: 670px;
-  }
-
-  .u-section-6 .u-text-1 {
-    font-weight: 700;
   }
 
   .u-section-6 .u-text-2 {
