--- a/EcoShield-Windows.css
+++ b/EcoShield-Windows.css
@@ -309,6 +309,10 @@
   }
 }
 
+ .u-section-3-2 {
+  background-image: linear-gradient(#d9d9d9, white);
+}
+
 .u-section-3-2 .u-sheet-1 {
   min-height: 800px;
 }
@@ -413,6 +417,10 @@
   }
 }
 
+ .u-section-3-3 {
+  background-image: linear-gradient(#d9d9d9, white);
+}
+
 .u-section-3-3 .u-sheet-1 {
   min-height: 800px;
 }
@@ -497,6 +505,10 @@
     font-size: 1.25rem;
     margin: 21px 0 0;
   }
+}
+
+ .u-section-3-4 {
+  background-image: linear-gradient(#d9d9d9, white);
 }
 
 .u-section-3-4 .u-sheet-1 {
@@ -588,6 +600,10 @@
   }
 }
 
+ .u-section-3-5 {
+  background-image: linear-gradient(#d9d9d9, white);
+}
+
 .u-section-3-5 .u-sheet-1 {
   min-height: 800px;
 }
@@ -666,6 +682,10 @@
     font-size: 1.25rem;
     margin: 21px 0 58px;
   }
+}
+
+ .u-section-3-6 {
+  background-image: linear-gradient(#d9d9d9, white);
 }
 
 .u-section-3-6 .u-sheet-1 {
@@ -1518,25 +1538,25 @@
 }
 
 .u-section-9 .u-layout-cell-1 {
-  min-height: 655px;
+  min-height: 687px;
 }
 
 .u-section-9 .u-container-layout-1 {
   padding: 12px 52px;
 }
 
+.u-section-9 .u-text-1 {
+  margin: 40px 0 0 16px;
+}
+
 .u-section-9 .u-image-1 {
   width: 450px;
   height: 75px;
-  margin: 118px auto 0;
-}
-
-.u-section-9 .u-text-1 {
-  margin: 23px 8px 0;
+  margin: 30px auto 0;
 }
 
 .u-section-9 .u-text-2 {
-  margin: 53px 8px 0;
+  margin: 84px 8px 0;
 }
 
 .u-section-9 .u-layout-cell-2 {
@@ -1669,24 +1689,23 @@
     min-height: 556px;
   }
 
+  .u-section-9 .u-text-1 {
+    width: auto;
+    margin-top: 149px;
+    margin-left: 0;
+  }
+
   .u-section-9 .u-image-1 {
     height: 61px;
-    margin-top: 44px;
+    margin-top: -157px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
-  .u-section-9 .u-text-1 {
-    width: auto;
-    margin-top: 44px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
   .u-section-9 .u-text-2 {
     width: auto;
-    margin-top: 44px;
+    margin-top: 140px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -1715,8 +1734,13 @@
     padding-right: 30px;
   }
 
+  .u-section-9 .u-text-1 {
+    margin-top: 138px;
+  }
+
   .u-section-9 .u-image-1 {
     height: 50px;
+    margin-top: -146px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -1745,11 +1769,20 @@
     padding-right: 50px;
   }
 
+  .u-section-9 .u-text-1 {
+    margin-top: 175px;
+  }
+
   .u-section-9 .u-image-1 {
     height: 87px;
+    margin-top: -170px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
+  }
+
+  .u-section-9 .u-text-2 {
+    margin-top: 127px;
   }
 }
 
@@ -1771,19 +1804,22 @@
     padding-right: 20px;
   }
 
+  .u-section-9 .u-text-1 {
+    margin-top: 142px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
   .u-section-9 .u-image-1 {
     height: 54px;
+    margin-top: -131px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-9 .u-text-1 {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-
   .u-section-9 .u-text-2 {
+    margin-top: 121px;
     margin-left: 30px;
     margin-right: 30px;
   }
