--- a/nicepage.css
+++ b/nicepage.css
@@ -43184,7 +43184,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-nav-2 {
-  font-size: 1rem;
+  font-size: 1.25rem;
   letter-spacing: 0px;
   font-weight: 700;
 }
@@ -43370,8 +43370,8 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-header .u-group-elements-2 {
     width: 291px;
     min-height: 79px;
-    margin-top: -1px;
-    margin-bottom: 2px;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   .u-header .u-btn-2 {
