--- a/nicepage.css
+++ b/nicepage.css
@@ -43564,9 +43564,9 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-image-1 {
-  width: 423px;
-  height: 295px;
-  margin: -55px auto 0;
+  width: 489px;
+  height: 341px;
+  margin: -81px auto 0;
 }
 
 .u-header .u-logo-image-1 {
@@ -43578,7 +43578,7 @@ a.u-link.u-text-hover-grey-90:hover {
   --radius: 50px;
   font-size: 1.125rem;
   background-image: none;
-  margin: -182px 21px 0 auto;
+  margin: -203px 21px 0 auto;
   padding: 8px 27px 8px 26px;
 }
 
@@ -43611,16 +43611,19 @@ a.u-link.u-text-hover-grey-90:hover {
   letter-spacing: 0px;
 }
 @media (max-width: 1199px) {
-  .u-header .u-sheet-1 {
-    min-height: 102px;
+  .u-header .u-image-1 {
+    width: 497px;
+    height: 347px;
+    margin-top: -86px;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -182px;
-    margin-right: 200px;
+    margin-top: -207px;
+    margin-right: 0;
   }
 
   .u-header .u-btn-2 {
+    margin-top: -38px;
     margin-bottom: 51px;
     margin-left: 0;
   }
@@ -43629,7 +43632,6 @@ a.u-link.u-text-hover-grey-90:hover {
 @media (max-width: 991px) {
   .u-header .u-btn-1 {
     margin-top: 1px;
-    margin-right: 0;
   }
 
   .u-header .u-btn-2 {
@@ -43641,23 +43643,24 @@ a.u-link.u-text-hover-grey-90:hover {
 
 @media (max-width: 575px) {
   .u-header .u-sheet-1 {
-    min-height: 249px;
+    min-height: 272px;
   }
 
   .u-header .u-image-1 {
-    margin-top: -56px;
-    margin-left: -50px;
+    margin-top: -85px;
+    margin-left: -74px;
+    margin-right: -74px;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -94px;
+    margin-top: -93px;
     margin-right: auto;
   }
 
   .u-header .u-btn-2 {
-    margin-top: 12px;
+    margin-top: 11px;
     margin-left: auto;
-    margin-bottom: 11px;
+    margin-bottom: 17px;
   }
 }
 
