--- a/Brochure.css
+++ b/Brochure.css
@@ -1,15 +1,14 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 884px;
+  min-height: 946px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 50px auto 0;
+  margin: 30px auto 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-size: 1.25rem;
-  width: 793px;
-  margin: 30px auto 0;
+  font-size: 1.5rem;
+  margin: 50px 0 0;
 }
 
 .u-section-1 .u-gallery-1 {
@@ -69,12 +68,13 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-text-1 {
-    margin-left: 286px;
+    width: auto;
+    margin-top: 32px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-left: 147px;
-    margin-right: 147px;
+    width: auto;
+    margin-top: 48px;
   }
 
   .u-section-1 .u-gallery-1 {
@@ -98,7 +98,6 @@
   }
 
   .u-section-1 .u-text-2 {
-    width: 720px;
     margin-left: 50px;
     margin-right: 50px;
   }
@@ -114,8 +113,9 @@
   }
 
   .u-section-1 .u-text-2 {
-    width: 540px;
     font-size: 1rem;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-gallery-inner-1 {
@@ -129,21 +129,17 @@
   }
 
   .u-section-1 .u-text-1 {
-    width: auto;
     margin-left: 24px;
     margin-right: 24px;
   }
 
   .u-section-1 .u-text-2 {
-    width: auto;
-    margin-top: 37px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 50px;
   }
 
   .u-section-1 .u-gallery-1 {
     height: 487px;
-    margin-top: 112px;
+    margin-top: 50px;
     margin-right: initial;
     margin-left: initial;
   }
