--- a/EcoShield-Windows.css
+++ b/EcoShield-Windows.css
@@ -800,6 +800,12 @@
   font-size: 1.3em;
 }
 
+@media (max-width: 1199px) {
+  .u-section-4 .u-btn-1 {
+    animation-duration: 10000ms;
+  }
+}
+
 @media (max-width: 767px) {
   .u-section-4 .u-btn-1 {
     font-size: 1.25rem;
@@ -1027,7 +1033,6 @@
 
 .u-section-9 .u-repeater-1 {
   grid-gap: 10px 10px;
-  grid-auto-columns: calc(50% - 5px);
   grid-template-columns: calc(50% - 5px) calc(50% - 5px);
   min-height: 580px;
 }
@@ -1047,7 +1052,7 @@
 }
 
 .u-section-9 .u-text-1 {
-  margin: 25px auto 0;
+  margin: 28px 21px 0;
 }
 
 .u-section-9 .u-list-item-2 {
@@ -1065,7 +1070,7 @@
 }
 
 .u-section-9 .u-text-2 {
-  margin: 25px auto 0;
+  margin: 28px 21px 0;
 }
 
 .u-section-9 .u-list-item-3 {
@@ -1083,7 +1088,7 @@
 }
 
 .u-section-9 .u-text-3 {
-  margin: 25px auto 0;
+  margin: 28px 21px 0;
 }
 
 .u-section-9 .u-list-item-4 {
@@ -1101,12 +1106,11 @@
 }
 
 .u-section-9 .u-text-4 {
-  margin: 25px auto 0;
+  margin: 28px 21px 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-9 .u-repeater-1 {
-    grid-template-columns: repeat(2, calc(50% - 5px));
     min-height: 479px;
   }
 
@@ -1137,14 +1141,7 @@
 
 @media (max-width: 991px) {
   .u-section-9 .u-repeater-1 {
-    grid-auto-columns: calc(100% - 0px);
     grid-template-columns: 100%;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-9 .u-repeater-1 {
-    grid-auto-columns: 100%;
   }
 } .u-section-10 {
   background-image: none;
